- Fixed landing page video playback issue on iOS

--- a/examples/webgl-timemachine/landing/landing.css
+++ b/examples/webgl-timemachine/landing/landing.css
@@ -301,6 +301,14 @@ body, html {
   margin-top: 20px;
 }
 
+.vjs-big-play-button {
+  display: inline-block !important;
+}
+
+.vjs-has-started .vjs-big-play-button {
+  display: none !important;
+}
+
 #contact-form-confirmation {
   color: green;
   display: none;
